todo 1- Lazy and eager load